<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.omejibika.endoscope.MainActivity">
    <item
        android:id="@+id/action_selectfolder"
        android:icon="@drawable/ic_folder_open_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_selectfolder"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_file_upload_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_upload"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>
